--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,6 @@ body {
 }
 
 .btn {
-	display: inline-block;
 	background: #000;
 	color: #fff;
 	border: none;
@@ -39,6 +38,9 @@ body {
 	text-decoration: none;
 	font-size: 0.9375rem;
 	font-family: inherit;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .btn:disabled {
@@ -54,7 +56,7 @@ body {
 }
 
 .btn-block {
-	display: block;
+	display: flex;
 	width: 100%;
 	margin: auto;
 }
@@ -104,4 +106,13 @@ p.description {
 	padding: 0.1875rem 0.4375rem;
 	font-size: 1.0625rem;
 	font-family: inherit;
+}
+
+.mt-3 {
+	margin-top: 1.5rem;
+}
+
+.loading-wrapper {
+	display: flex;
+	justify-content: center;
 }
